fix class paths

--- a/.groovylintrc.json
+++ b/.groovylintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "recommended",
   "rules": {
+    "CompileStatic": "off",
     "DuplicateStringLiteral": "off",
     "DuplicateNumberLiteral": "off",
     "Indentation": {
