--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # Ignore Gradle build output directory
 build
+bin
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
