fix task invocation

--- a/build.gradle
+++ b/build.gradle
@@ -125,15 +125,19 @@ tasks.create('jacobo', JacoboTask) { jacobo ->
     jacobo.jacocoReport = file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
     jacobo.coberturaReport = file("${project.buildDir}/reports/cobertura/cobertura.xml")
     jacobo.srcDirs = sourceSets.main.groovy.srcDirs
+
+    finalizedBy 'changeCoberturaSourceFileEndings' // merge individual XML files into single XML file for CI Consumption
 }
 
 task changeCoberturaSourceFileEndings {
-    String coberturaFile = "${project.buildDir}/reports/cobertura/cobertura.xml"
-    Node coberturaCoverage = (new XmlParser()).parse(coberturaFile)
-    coberturaCoverage.packages.package.each { coveragePackage ->
-        coveragePackage.classes.class.each { packageClass ->
-            packageClass.@filename = packageClass.@filename.replaceAll(/\.java$/, '.groovy')
+    doLast {
+        String coberturaFile = "${project.buildDir}/reports/cobertura/cobertura.xml"
+        Node coberturaCoverage = (new XmlParser()).parse(coberturaFile)
+        coberturaCoverage.packages.package.each { coveragePackage ->
+            coveragePackage.classes.class.each { packageClass ->
+                packageClass.@filename = packageClass.@filename.replaceAll(/\.java$/, '.groovy')
+            }
         }
+        new XmlNodePrinter(new PrintWriter(new FileWriter(coberturaFile))).print(coberturaCoverage)
     }
-    new XmlNodePrinter(new PrintWriter(new FileWriter(coberturaFile))).print(coberturaCoverage)
 }
