--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,6 @@ dependencies {
     // Use the latest Groovy version for building this library
     implementation 'org.codehaus.groovy:groovy-all:3.0.9'
 
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:30.1.1-jre'
-
     // Needed for Jenkins @NonCPS annotations
     implementation 'com.cloudbees:groovy-cps:1.31'
 
@@ -52,12 +49,9 @@ dependencies {
     implementation 'org.jenkins-ci.plugins:http_request:1.14@jar'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 
-    // Use the awesome Spock testing and specification framework even with Java
+    // Testing frameworks used to run tests
     testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
     testImplementation 'junit:junit:4.13.2'
-
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
 
     // Needed to merge suite junit XML into single XML for CI consumption
     antJUnit 'org.apache.ant:ant-junit:1.9.7'
